New: MySQL_Intro; Mod: All

--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -39,20 +39,21 @@
                 <li>Инсталиране на SublimeText 3.</li>
             </ol>
         </li>
-        <li id="DB_SQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в базите данни и SQL</span><span class="hours">2</span></h3>
+        <li id="DB_SQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в базите данни и SQL</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes start">
                 <li>Основни понятия от релационни бази данни.</li>
                 <li>Структура на  релационни бази данни – RDBMS.</li>
                 <li>Таблици в RDBMS.</li>
                 <li>Видове връзки между таблици.</li>
+                <li>Въведение в SQL.</li>
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни синтактични правила на MySQL.Типове данни в MySQL.</span><span class="hours">4</span></h3>
+        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни команди в MySQL за администриране на потребители, бази данни и таблици.</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down"> Основни команди в MySQL за създаване, обновяване  и изтриване на таблици в MySQL.(create table,  update, drop table)</span><span class="hours">2</span></h3>
+        <li id="xxx"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/xxx/xxx.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
@@ -62,7 +63,7 @@
 
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL – (insert, update, delete);</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL – (insert, update, delete);</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
