--- a/pages/themes/beginners/CourseIntro/CourseIntro.html
+++ b/pages/themes/beginners/CourseIntro/CourseIntro.html
@@ -33,8 +33,10 @@
     <!--[if lt IE 9]>
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
-    <!-- custom -->
+    <!-- CUSTOM -->
     <link rel="stylesheet" href="/ProgressBG-MySQL/outfit/css/reveal.js.css">
+    <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/custom_hljs.css">
+    <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/common/themes/MatDes/text_schemes.css">
     <base target="_blank">
 </head>
 <body>
@@ -174,6 +176,11 @@
             <dd><a href="http://dev.mysql.com/downloads/workbench/">Download MySQL Workbench</a></dd>
             <dd>Изберете от падащото меню ('Select Platform') желаната от вас палтформа и следвайте инструкциите.</dd>
         </dl>
+    </section>
+    <section><h3>Optional</h3>
+        <p><a href="https://github.com/dbcli/mycli">mycli</a>: A Terminal Client for MySQL with AutoCompletion and Syntax Highlighting.</p>
+        <img src="https://github.com/dbcli/mycli/raw/master/screenshots/tables.png">
+        <span class="note">Requires python</span>
     </section>
     <section><h3>Тестване на инсталациите</h3>
         <dl class="fa">MySQL Client
