--- a/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
+++ b/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
@@ -37,6 +37,12 @@
     <link rel="stylesheet" href="/ProgressBG-MySQL/outfit/css/reveal.js.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/custom_hljs.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/common/themes/MatDes/text_schemes.css">
+    <style type="text/css">
+        .slides section pre>code{
+            font-size: 2em;
+            line-height: 1em;
+        }
+    </style>
     <base target="_blank">
 </head>
 <body>
@@ -156,7 +162,7 @@
         <p>Document databases store data in objects that can be <span class="note">deeply nested</span> and can consist of <span class="note">arbitrary fields</span>.</p>
     </section>
 </section>
-<section><h2>The Relational Model and SQL</h2>
+<section><h2>The Relational Model</h2>
     <section><h3>Definition</h3>
         <dl class="fa">
             <dt>A database is a collection of one or more <span class="keyconcept">tables</span>, where each tables is a relation between rows and columns.</dt>
@@ -221,6 +227,30 @@
                 <dd>Refresh the 'SCHEMAS' panel.</dd>
             </dd>
         </dl>
+    </section>
+</section>
+<section><h2>SQL Introduction</h2>
+    <section><h3>What is SQL?</h3>
+    <dl class="fa">
+        <dt><abbr>SQL</abbr><dfn id="SQL"><span>Structured</span><span>Query</span><span>Language</span></dfn></dt>
+        <dt>The standard language for relational database management systems.</dt>
+        <dt>Not a procedural language(C, Java etc.).</dt>
+        <dt>A declarative language!</dt>
+            <dd>Tell with SQL <b>what</b> you want instead of telling the system how to get it.</dd>
+        <dt>Case insensitive!</dt>
+    </dl>
+    </section>
+    <section><h3>SQL statements</h3>
+    <dl class="fa">
+        <dt>A set of commands you use to <span class="keyconcept">query</span> or <span class="keyconcept">manipulate</span> the DB.</dt>
+        <dt>Some RDBMS require a semicolon at the end of each SQL statement.</dt>
+    </dl>
+    </section>
+    <section><h3>Example SQL commands</h3>
+        <p><span class="keyconcept">SELECT</span>, <span class="keyconcept">UPDATE</span>, <span class="keyconcept">DELETE</span></p>
+        <p><span class="keyconcept">INSERT INTO</span>, <span class="keyconcept">CREATE DATABASE</span>, <span class="keyconcept">ALTER DATABASE</span></p>
+        <p><span class="keyconcept">CREATE TABLE</span>, <span class="keyconcept">ALTER TABLE</span>, <span class="keyconcept">DROP TABLE</span></p>
+        <p><span class="keyconcept">CREATE INDEX</span>, <span class="keyconcept">DROP INDEX</span></p>
     </section>
 </section>
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
