--- a/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html
+++ b/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>cliche</title>
+    <title>MySQL_Intro</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -26,15 +26,19 @@
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <!-- CUSTOM -->
-    <!-- CUSTOM -->
     <link rel="stylesheet" href="/ProgressBG-MySQL/outfit/css/reveal.js.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/custom_hljs.css">
-    <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/common/themes/MatDes/text_schemes.css">
+    <style type="text/css">
+        .slides section pre>code{
+            font-size: 2em;
+            line-height: 1em;
+        }
+    </style>
     <base target="_blank">
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#cliche" target="_top"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Intro" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -52,7 +56,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>PresentationTitile</h1></section>
+<section><h1>Let's start using MySQL</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -69,12 +73,124 @@
         </div>
     </div>
 </section>
-
-<section><h2>SectionTitle</h2>
-    <section>
-
+<section><h2>Executing SQL Statements from a text file</h2>
+    <section><h3>While connecting with MySQL client</h3>
+        <pre><code>
+mysql -u user_name -p [db_name] < text_file
+        </code></pre>
+    </section>
+    <section><h3>In MySQL client</h3>
+        <pre><code>
+mysql> source file_name
+        </code></pre>
     </section>
 </section>
+<section><h2>Manage databases</h2>
+    <section><h3>List All Databases</h3>
+        <pre><code>
+SHOW DATABASES;
+        </code></pre>
+    </section>
+    <section><h3>Create DB</h3>
+        <pre><code>
+CREATE DATABASE music_db;
+        </code></pre>
+    </section>
+    <section><h3>Delete a Database</h3>
+        <pre><code>
+DROP DATABASE music_db;
+        </code></pre>
+    </section>
+    <section><h3>Selecting a Database</h3>
+        <pre><code>
+USE music_db;
+        </code></pre>
+    </section>
+</section>
+<section><h2>Manage users</h2>
+    <section><h3>Create a New User</h3>
+        <pre><code>
+CREATE USER 'music_db_admin'@'localhost' IDENTIFIED BY '1234';
+        </code></pre>
+    </section>
+    <section><h3>Delete user</h3>
+        <pre><code>
+DROP USER 'music_db_admin'@'localhost';
+        </code></pre>
+    </section>
+    <section><h3>User privileges types</h3>
+        <dl class="fa">
+            <dt>ALL PRIVILEGES- this would allow a MySQL users all access to a designated database (or if no database is selected, across the system)</dt>
+            <dt>CREATE- allows them to create new tables or databases</dt>
+            <dt>DROP- allows them to them to delete tables or databases</dt>
+            <dt>DELETE- allows them to delete rows from tables</dt>
+            <dt>INSERT- allows them to insert rows into tables</dt>
+            <dt>SELECT- allows them to use the Select command to read through databases</dt>
+            <dt>UPDATE- allow them to update table rows</dt>
+            <dt>GRANT OPTION- allows them to grant or remove other users' privileges</dt>
+        </dl>
+    </section>
+    <section><h3>Grant privileges to a user</h3>
+        <pre><code>GRANT [type of permission] ON [database name].[table name] TO ‘[username]’@'host’;</code></pre>
+        <p></p>
+        <pre><code>
+GRANT ALL PRIVILEGES ON music_db.* TO 'music_db_admin'@'localhost';
+        </code></pre>
+    </section>
+    <section><h3>Revoke privileges</h3>
+        <pre><code>REVOKE [type of permission] ON [database name].[table name] FROM ‘[username]’@‘localhost’;</code></pre>
+    </section>
+    <section><h3>Reload all the privileges</h3>
+        <p>Always be sure to reload all the privileges.</p>
+        <pre><code>
+FLUSH PRIVILEGES;
+        </code></pre>
+    </section>
+    <section><h3>Show al users</h3>
+        <pre><code>
+select * from mysql.user;
+        </code></pre>
+    </section>
+</section>
+<section><h2>Manage tables</h2>
+    <section><h3>Create table</h3>
+       <pre><code>
+CREATE TABLE artists (
+  fname VARCHAR(20) NOT NULL,
+  lname VARCHAR(20) DEFAULT NULL,
+  PRIMARY KEY (fname)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+        </code></pre>
+    </section>
+    <section><h3>List All Tables</h3>
+        <pre><code>
+SHOW TABLES;
+        </code></pre>
+    </section>
+    <section><h3>Show Table Structure</h3>
+        <pre><code>
+DESC artists;
+        </code></pre>
+    </section>
+    <section><h3>Delete a Table</h3>
+        <pre><code>
+DROP TABLE;
+        </code></pre>
+    </section>
+    <section><h3>Modify a Table - Add a Column</h3>
+        <pre><code>
+ALTER TABLE artists
+    ADD birth_date TINYINT;
+    AFTER lname;a
+        </code></pre>
+    </section>
+    <section><h3>Modify a Table - Remove a Column</h3>
+        <pre><code>
+ALTER TABLE artists DROP birth_date;
+        </code></pre>
+    </section>
+</section>
+
 
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
     <!-- <img class="the_end" src="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg"> -->
@@ -106,7 +222,7 @@
             // minScale: .5,
             maxScale: 1,
             // slide transition
-            transition: 'concave', // none/fade/slide/convex/concave/zoom
+            transition: 'slide', // none/fade/slide/convex/concave/zoom
             // Factor of the display size that should remain empty around the content
             margin: 0.1,
             // shift+maous click to zoom in/out element
