slides edits; music_db added

--- a/pages/themes/beginners/CourseIntro/CourseIntro.html
+++ b/pages/themes/beginners/CourseIntro/CourseIntro.html
@@ -223,12 +223,14 @@
         <dl class="fa">
             <dt>Под Windows</dt>
                 <pre><code>C:\> "C:\Program Files\MySQL\MySQL Server 5.6\bin\mysqld"</code></pre>
+                <p>Или <a href="http://dev.mysql.com/doc/refman/5.7/en/windows-start-service.html">Starting MySQL as a Windows Service</a></p>
             <dt>Под Linux</dt>
                 <pre><code>sudo /etc/init.d/mysql start</code></pre>
                 или
                 <pre><code>sudo service mysql sart</code></pre>
             <dt>Под OS X</dt>
                 <pre><code>sudo /usr/local/mysql/support-files/mysql.server start</code></pre>
+                <p>Или чрез<a href="http://dev.mysql.com/doc/refman/5.7/en/osx-installation-prefpane.html">MySQL Preference Pane</a></p>
         </dl>
     </section>
     <section><h3>Тестване на инсталациите</h3>
