MySQL_Data_Types started

--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -53,9 +53,12 @@
 
             </ol>
         </li>
-        <li id="xxx"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/xxx/xxx.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">2</span></h3>
+        <li id="MySQL_Data_Types"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
-
+                <li>Numeric Types</li>
+                <li>Date and Time Types</li>
+                <li>String Types</li>
+                <li>The JSON Data Type</li>
             </ol>
         </li>
         <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBMS посредством първичен ключ (primary key),външен ключ  (foreign key) и връзка между отделните таблици</span><span class="hours">2</span></h3>
