--- a/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html
+++ b/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html
@@ -245,7 +245,22 @@ smoker ENUM('yes','no'),
         </dl>
     </section>
 </section>
+<section><h2>Task</h2>
+<pre>
+Table Artist (изпълнител)
 
+fname,
+lname,
+age,
+salary,
+birth_date,
+start_time, # стартова дата и час на работен ден
+end_time,   # крайна дата и час на работен ден
+table_created  # създаване на таблицата (дата и час)
+table_updated  # промяна на таблицата (дата и час)
+
+</pre>
+</section>
 
 
 <section><h2>The JSON Data Type</h2>
