Tables: Insert,delete,update data start

--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -48,9 +48,11 @@
                 <li>Въведение в SQL.</li>
             </ol>
         </li>
-        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни команди в MySQL за администриране на потребители, бази данни и таблици.</span><span class="hours">4</span></h3>
+        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
-
+                <li>DataBase: Show, Create, Drop, Use.</li>
+                <li>Users: Create, Drop, Grant privileges.</li>
+                <li>Tables: Create, Show, Describe, Alter.</li>
             </ol>
         </li>
         <li id="MySQL_Data_Types"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">2</span></h3>
@@ -58,20 +60,21 @@
                 <li>Numeric Types</li>
                 <li>Date and Time Types</li>
                 <li>String Types</li>
-                <li>The JSON Data Type</li>
+                <li>The ENUM Data Type</li>
             </ol>
         </li>
-         <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBMS посредством първичен ключ (primary key),външен ключ  (foreign key) и връзка между отделните таблици</span><span class="hours">2</span></h3>
+        <li id="Tables_insert_delete_update_data"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/Tables_insert_delete_update_data/Tables_insert_delete_update_data.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
-
-            </ol>
-        </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL – (insert, update, delete);</span><span class="hours">2</span></h3>
-            <ol class="iep_syllabus_sub_themes">
-
+            <li>Insert into table</li>
+            <li></li>
             </ol>
         </li>
         <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Извличане на данни от таблици посредством команда (select) и клауза (where)</span><span class="hours">2</span></h3>
+            <ol class="iep_syllabus_sub_themes">
+
+            </ol>
+        </li>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBMS посредством първичен ключ (primary key),външен ключ  (foreign key) и връзка между отделните таблици</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
