--- a/pages/themes/beginners/Insert_delete_update_data/Insert_delete_update_data.html
+++ b/pages/themes/beginners/Insert_delete_update_data/Insert_delete_update_data.html
@@ -215,6 +215,7 @@ pub_year;
             <dd>Download the <a href="slides_examples/books_db_schema.sql">books_db_schema.sql</a></dd>
             <dd>Download the <a href="slides_examples/books_db_sample_data.sql">books_db_sample_data.sql</a></dd>
             <dd>Execute the SQL statements by using one of the approaches described in <a href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html#load_external_sql">MySQL_Intro.html (load_external_sql)</a></dd>
+            <dt>Use the 'INSERT', 'UPDATE' and 'DELETE' statements to modify the data in the example (or in your) data base.</dt>
         </dl>
     </section>
 </section>
